--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uz">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solijonov Dostonbekning portfolio sahifasi</title>
+    <meta
+      name="description"
+      content="Solijonov Dostonbekning shaxsiy portfolio sahifasi. Web dasturlash va boshqa loyihalar bilan tanishing."
+    />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- Open Graph (Facebook va boshqa ijtimoiy tarmoqlar uchun) -->
+    <meta
+      property="og:title"
+      content="Solijonov Dostonbekning portfolio sahifasi"
+    />
+    <meta
+      property="og:description"
+      content="Web dasturlash va boshqa loyihalar bilan tanishing."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://sizning-saytingiz.uz/preview.png"
+    />
   </head>
   <body>
     <div id="root"></div>
